--- a/index.html
+++ b/index.html
@@ -1,40 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <main>
+    <div class="content">
+      <div class="logos">
+        <img id="box" src="./images/illustration-box-desktop.svg" alt="">
+      </div>
+      <div class="accordion">
+        <h1>FAQ</h1>
+        <div class="question">
+          <h2> How many team members can I invite?</h2>
+          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
+  
+        </div>
+        <p> You can invite up to 2 additional users on the Free plan. There is no limit on
+          team members for the Premium plan.</p>
+  
+        <div class="question">
+          <h2> What is the maximum file upload size?</h2>
+          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
+  
+        </div>
+  
+        <p> No more than 2GB. All files in your account must fit your allotted storage space.</p>
+  
+        <div class="question">
+          <h2> How do I reset my password?</h2>
+          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
+  
+        </div>
+        <p> Click “Forgot password” from the login page or “Change password” from your profile page.
+          A reset link will be emailed to you.</p>
+  
+        <div class="question">
+          <h2>Can I cancel my subscription?</h2>
+          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
+  
+        </div>
+        Yes! Send us a message and we’ll process your request no questions asked.
+  
+        <div class="question">
+          <h2> Do you provide additional support?</h2>
+          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
+  
+        </div>
+        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+      </div>
+    </div>
+    
+  </main>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
