--- a/index.html
+++ b/index.html
@@ -30,55 +30,77 @@
 <body>
   <main>
     <div class="content">
-      <div class="logos">
-        <img id="box" src="./images/illustration-box-desktop.svg" alt="">
-      </div>
+      <img class="box" src="./images/illustration-box-desktop.svg" alt="">
+      <img src="./images/illustration-woman-online-mobile.svg" alt="" class="lady">
+
       <div class="accordion">
+
         <h1>FAQ</h1>
-        <div class="question">
-          <h2> How many team members can I invite?</h2>
-          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
-  
+        <div class="qa">
+          <div class="question">
+            <h2> How many team members can I invite?</h2>
+            <button id="btn"><img src="./images/icon-arrow-down.svg" alt=""></button>
+
+          </div>
+          <p> You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.</p>
         </div>
-        <p> You can invite up to 2 additional users on the Free plan. There is no limit on
-          team members for the Premium plan.</p>
-  
-        <div class="question">
-          <h2> What is the maximum file upload size?</h2>
-          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
-  
+
+        <div class="qa">
+          <div class="question">
+            <h2> What is the maximum file upload size?</h2>
+            <button id="btn"><img src="./images/icon-arrow-down.svg" alt=""></button>
+
+          </div>
+
+          <p> No more than 2GB. All files in your account must fit your allotted storage space.</p>
         </div>
-  
-        <p> No more than 2GB. All files in your account must fit your allotted storage space.</p>
-  
-        <div class="question">
-          <h2> How do I reset my password?</h2>
-          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
-  
+
+        <div class="qa">
+          <div class="question">
+            <h2> How do I reset my password?</h2>
+            <button id="btn"><img src="./images/icon-arrow-down.svg" alt=""></button>
+
+          </div>
+          <p> Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
         </div>
-        <p> Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.</p>
-  
-        <div class="question">
-          <h2>Can I cancel my subscription?</h2>
-          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
-  
+
+        <div class="qa">
+          <div class="question">
+            <h2>Can I cancel my subscription?</h2>
+            <button id="btn"><img src="./images/icon-arrow-down.svg" alt=""></button>
+
+          </div>
+          <p> Yes! Send us a message and we’ll process your request no questions asked.</p>
         </div>
-        Yes! Send us a message and we’ll process your request no questions asked.
-  
-        <div class="question">
-          <h2> Do you provide additional support?</h2>
-          <button><img src="./images/icon-arrow-down.svg" alt=""></button>
-  
+
+        <div class="qa">
+          <div class="question">
+            <h2> Do you provide additional support?</h2>
+            <button id="btn"><img src="./images/icon-arrow-down.svg" alt=""></button>
+
+          </div>
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
         </div>
-        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+
       </div>
+
     </div>
-    
+
   </main>
 
 
+  <script>
 
+    const myList = document.getElementsByClassName('qa');
+    for (i = 0; i < myList.length; i++) {
+      myList[i].addEventListener('click', function () {
+        this.classList.toggle('active')
+      })
+    }
+
+  </script>
 
 </body>
 
